--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <div class="slide1w" style="background-color: rgb(255, 255, 255);">T
+        <div class="slide1w" style="background-color: rgb(255, 255, 255);">
+            <span>Hello Philip</span>
             <button id="s1d">
                 Down
             </button>
