--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     .s1p1 {
       grid-row: 3;
       grid-column: 2;
+      align-self: start;
       color:white;
       font-size: 1.2em;
     }
