--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
       grid-row: 2;
       grid-column: 2;
       align-self: start;
-      max-width: 400px;
+      justify-self: center;
+      max-width: 450px;
     }
 
     .s1p1 {
