--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       height: 100vh;
       display: grid;
       grid-template-columns: 5% 90% 5%;
-      grid-template-rows: 5% 50% 30% 15%;
+      grid-template-rows: 5% 40% 30% 25%;
       z-index: 1;
     }
 
@@ -99,14 +99,14 @@
     }
 
     .s1d1 {
-      font-size: 2em;
+      font-size: 1.8em;
       font-weight: 400;
     }
 
     .s1nav {
       grid-row: 4;
       grid-column: 2;
-      align-self: start;
+      align-self: end;
       color: white;
       font-size: 1.2em;
       margin: 24px;
@@ -125,7 +125,9 @@
       padding: 20px;
       border-radius: 8px;
       color: white;
-      font-size: 1.2em;
+      font-size: 1em;
+      align-items: center;
+      justify-content: center;
     }
   </style>
 </head>
