--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       grid-row: 4;
       grid-column: 2;
       align-self: end;
-      justify-content: center;
+      justify-self: center;
       color: white;
       font-size: 1.2em;
       margin: 24px;
